<resources>
    <string name="app_name">Design App_Final</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="open_nav">"Open Navigation Drawer"</string>
    <string name="close_nav">"Close Navigation Drawer"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_search">MapsActivitySearch</string>
    <string name="map_kay" />
    <string name="Avail">Sizes	XXS, XS, S, M,/
    The lightweight Avail SL Disc is handcrafted with
        ALUXX SL, our highest grade aluminum. Avail optimizes a
        woman’s riding style, providing pedaling efficiency,razor-sharp handling and added compliance.</string>
    <string name="Blackhor">Sizes	XXS, XS, S, M,/
    BDisc brake technology offers braking confidence and control in variable conditions, and the integrated
        D-Fuse seatpost reduces road vibration and fatigue  </string>
    <string name="Evil">Sizes	XXS, XS, S, M,/
    s include the OverDrive steerer tube for increased frontal stiffness and precise steering</string>
    <string name="Hightwe">Sizes	XXS, XS, S, M,/
    Along with the PowerCore bottom bracket that transfers power directly from each pedal stroke to the road.</string>
    <string name="Lemonbin">Sizes	XXS, XS, S, M,/
    providing pedaling efficiency,razor-sharp handling and added compliance. </string>
    <string name="Mrdes">Sizes	XXS, XS, S, M,/
    BDisc brake technology offers braking confidence and control in variable conditions</string>
    <string name="Paris">Sizes	XXS, XS, S, M,/
    Powerful disc brakes and a compact frame geometry offer expert handling and control, no
        the weather and road conditions.</string>
    <string name="Trek">Sizes	XXS, XS, S, M,/
    Along with the PowerCore bottom bracket that transfers power directly from each pedal stroke to the road.</string>
    <string name="Torgue">Sizes	XXS, XS, S, M,/
        Powerful disc brakes and a compact frame geometry offer expert handling and control, no
        the weather and road conditions </string>
    <string name="title_activity_n">n</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nanigation_drawer">Nanigation_Drawer</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="your_travelling_partner">Your Travelling Partner</string>
    <string name="developed_by_s92067004">Developed by S92067004</string>
    <string name="todo">TODO</string>
    <string name="cycle_rider">CYCLE RIDER</string>
    <string name="loading">Loading</string>
    <string name="password">Password</string>


</resources>